resources/tests/parser/bad/stmt_while.gshl
while
while ()

while (32)

while () {

}

while {
